# media-lab-portolio

./: README.md
BigInt/: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  create_zip.sh  markdown.css  run.py  writeup.md
BigInt/assets/: bee_movie.txt  bee_movie_long.txt
BigInt/include/: aligned_alloc.tpp  bignum.hpp  thread_pool.hpp
BigInt/lib/: bignum.cpp  thread_pool.cpp
BigInt/profile/: barret_mod.txt  encrypt_one_liner.txt  faster_bit_shift.txt  naive_mod.txt  profile_decrypt_faster.txt  slow_bit_shift.txt
BigInt/src/: main.cpp  part1_main.cpp  part2_main.cpp
BigInt/tests/: test_addition_bignum.cpp  test_division_bignum.cpp  test_initialize_bignum.cpp  test_leftshift_bignum.cpp  test_modulus_bignum.cpp  test_modulus_exp_bignum.cpp  test_multiplication_bignum.cpp  test_power_bignum.cpp  test_rightshift_bignum.cpp  test_subtraction_bignum.cpp
kalmand/: auv-kalman3d.py  kalman_filters.py  util.py
message-buffer/: README.md
message-buffer/vision/: build.ninja  configure.py
message-buffer/vision/capture_sources/: flir.py  generic_camera.py  image_directory.py  stream_client.py  stream_server.py  video.py  zed.py
message-buffer/vision/capture_sources/configs/: zed.conf
message-buffer/vision/core/: base.py  capture_source.py  tuners.py
message-buffer/vision/core/bindings/: camera_message_framework.py
message-buffer/vision/include/: camera_message_framework.hpp  filelock.hpp
message-buffer/vision/lib/: camera_message_framework.cpp  camera_message_framework_c.cpp  filelock.cpp
message-buffer/vision/lib/configs/: ueye_downward_ajax.ini  ueye_downward_sirius.ini  ueye_forward_ajax_old.ini
message-buffer/vision/modules/: auto_calibrate.py  calibrate.py  color_balance.py  example.py  gate.py  logger.py  normal.py  poster.py  preprocessor.py  record.py  zed_auto_calibrate.py
message-buffer/vision/utils/: color.py  draw.py  feature.py  helpers.py  sift.py  transform.py
message-buffer/webserver/: __init__.py  auv-webserver.py  build.ninja
message-buffer/webserver/handlers/: controlpoint.py  map.py  vision.py
message-buffer/webserver/src/: controlpoint.jsx  cuauv.jsx  header.jsx
message-buffer/webserver/src/modules/: admin.jsx  drive.jsx  map.jsx  vision_module.jsx
message-buffer/webserver/templates/: map.html  vision_index.html
p3-docker-deploy/: .gitignore  README.md  environment.sh  requirements.txt
p3-docker-deploy/assets/: Dockerfile.base  passkey-stubs.txt  roster-fa2023-cs3410.csv  roster-test.csv
p3-docker-deploy/src/: autogendocker.py  autograde.py  containerutils.py  docker.py  osutils.py  to-csv.py
p3-docker-deploy/vm-data/: entrypoint.sh  spawner.sh
p3-docker-deploy/vm-data/lab08/: README  egg  simplebuffer.c
p3-docker-deploy/vm-data/proj3/beta/: README  egg  (+1 more)
p3-docker-deploy/vm-data/setup-scripts/: configure.sh  createuser.sh  invoke
(+4 files in other folders)
